# vv-agent-rs

./: .gitignore  AGENTS.md  Cargo.toml  GOAL.md  README.md  README_ZH.md  contract.lock.json
crates/vv-agent/: Cargo.toml
crates/vv-agent/docs/: app_server.md  app_server_runtime_mapping.md  app_server_v_claw_migration.md
crates/vv-agent/examples/: 01_quick_start.rs  02_agent_profiles.rs  03_sdk_client.rs  04_session_api.rs  05_ask_user_resume.rs  06_runtime_hooks.rs  07_token_budget_guard.rs  08_custom_tool.rs  09_resource_loader.rs  10_read_image.rs  11_sub_agent_pipeline.rs  12_skill_activation.rs  13_arxiv_pipeline.rs  14_batch_sub_tasks.rs  15_memory_compact_hook.rs  16_hook_composition.rs  17_error_recovery.rs  18_cancellation.rs  19_streaming.rs  20_thread_backend.rs  21_state_checkpoint.rs  22_sdk_advanced.rs  23_celery_backend.rs  23_distributed_backend.rs  24_workspace_backends.rs  25_temporary_tool_injection.rs  26_agent_runner_facade.rs  27_facade_handoff.rs  28_facade_approval_background_trace.rs  29_typed_final_output.rs  README.md  README_ZH.md
crates/vv-agent/examples/common/: mod.rs
crates/vv-agent/src/: agent.rs  approval.rs  background_sessions.rs  budget.rs  checkpoint.rs  cli.rs  config.rs  constants.rs  context.rs  context_providers.rs  event_store.rs  events.rs  execution_mode.rs  guardrails.rs  handoffs.rs  integrations.rs  interactive.rs  lib.rs  llm.rs  main.rs  memory.rs  model.rs  model_settings.rs  output_validation.rs  processes.rs  prompt.rs  result.rs  run_config.rs  run_handle.rs  runner.rs  runtime.rs  sdk.rs  sessions.rs  skills.rs  sub_agent_sessions.rs  sub_task_manager.rs  tools.rs  tracing.rs  types.rs  workspace.rs
crates/vv-agent/src/app_server/: client.rs  durable_resume.rs  host.rs  mod.rs  outgoing.rs  processor.rs  request_serialization.rs  run_adapter.rs  (+4 more)
crates/vv-agent/tests/: after_cycle_contract.rs  agent_tool_contract.rs  anthropic_prompt_cache.rs  apalis_backend.rs  app_server_approval.rs  app_server_cli.rs  app_server_client.rs  app_server_contract_parity.rs  app_server_cross_language_contract.rs  app_server_host.rs  app_server_initialize.rs  app_server_processor_methods.rs  app_server_protocol.rs  app_server_python_v1.rs  app_server_replay.rs  app_server_schema.rs  app_server_schema_fixtures.rs  app_server_server.rs  app_server_thread_turn.rs  app_server_transport.rs  app_server_turn_resume.rs  approval_provider.rs  approval_resume_completion.rs  approval_tool_policy_contract.rs  background_agent_task.rs  bash_tools.rs  builtin_tool_behavior_contract.rs  checkpoint_contract.rs  checkpoint_core.rs  checkpoint_resume_events.rs  checkpoint_v2_core.rs  cli.rs  cli_contract.rs  cli_contract_v1.json  completion_policy_contract.rs  configured_sub_agent_parity.rs  context_providers.rs  control_tools.rs  cycle_runner.rs  dev_settings.example.json  (+85 more)
(+725 files in other folders)
