[package]
name = "vv-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust mirror of the vv-agent Python package"

[lib]
name = "vv_agent"
path = "src/lib.rs"

[[bin]]
name = "vv-agent"
path = "src/main.rs"

[dependencies]
libc = "0.2"
base64 = "0.22"
futures-util = "0.3"
object_store = { version = "0.13.2", features = ["aws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.9"
thiserror = "2"
vv-llm = "0.1.0"

[dev-dependencies]
tempfile = "3"
