[package]
name = "vv-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust mirror of the vv-agent Python package"

[lib]
name = "vv_agent"
path = "src/lib.rs"

[[bin]]
name = "vv-agent"
path = "src/main.rs"

[dependencies]
libc = "0.2"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
object_store = { version = "0.13.2", features = ["aws"] }
redis = "0.32"
regex = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.9"
thiserror = "2"
vv-llm = "0.1.1"

[dev-dependencies]
tempfile = "3"
