[package]
name = "vv-agent"
version = "0.4.4"
edition = "2021"
license = "MIT"
description = "VectorVein agent runtime, SDK, CLI, tools, and workspace backends"
repository = "https://github.com/AndersonBY/vv-agent-rs"
homepage = "https://github.com/AndersonBY/vv-agent-rs"
documentation = "https://docs.rs/vv-agent"
readme = "../../README.md"
keywords = ["agent", "llm", "tools", "automation", "vectorvein"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "vv_agent"
path = "src/lib.rs"

[[bin]]
name = "vv-agent"
path = "src/main.rs"

[dependencies]
apalis = { version = "1.0.0-rc.9", optional = true, default-features = false }
libc = "0.2"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
object_store = { version = "0.13.2", features = ["aws"] }
redis = "0.32"
regex = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "0.9"
thiserror = "2"
unicode-normalization = "0.1"
vv-llm = "0.2.3"
schemars = "1"
ts-rs = { version = "11", features = ["serde-json-impl"] }

[features]
default = []
apalis = ["dep:apalis"]

[dev-dependencies]
tempfile = "3"
